[package]
name = "dungeoncrawler"
version = "0.1.0"
authors= ["Olivier Azevedo <olivier.azevedo@gmail.com>"]
description= "Dungeon Crawler game in Rust"
keywords = ["gamedev", "rust"]
categories = ["gaming"]
repository = "git@github.com:acrifolium/dungeon_crawler.git"
license = "MIT OR Apache-2.0"
license_file= "LICENSE"
readme= "README.md"
edition = "2021"

[profile.release]
lto = "thin"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = {version="~0.8", features=["webgpu"], default-features=false }
legion = "=0.3.1"
serde = { version = "=1.0.115" }
ron = "=0.6.1"
